--- a/src/components/AuthBox/AuthBox.css
+++ b/src/components/AuthBox/AuthBox.css
@@ -10,14 +10,14 @@
 }
 
 .auth-box {
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: rgb(13, 27, 68);
   border-radius: 16px;
   width: 360px;
   max-width: 90vw;
   padding: 40px;
   text-align: center;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.982);
 
   display: flex;
   flex-direction: column;
